# forecasting

./: .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  PREDICTION_APPROACH.md  README.md  docker-compose.yml  main.py  main_new.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
infra/mlflow/: mlflow.dockerfile
prds/: 005_future_timeline_separate_relevance_computation.md  006_app_name.md
prds/DONE/: 000_integrate_news_downloading.md  001_integrate_simulation.md  001_integrate_simulation.plan.md  002_current_timelinegenerationimprovement.md  003_generate_until.md  004_ui_display_relevant_news_and_timelines.md  007_logging.md  009_news_relevance_only_past_day.md  010_timeline_implication_date_conditional.md  011_current_feedback.md  012_ui_relevant_news_pagination.md  014_polymarket_prompt_sanitization.md  016_open_market_opportunity_view.md  018_future_timeline_multisim.md  020_news_download_latest.md  021_geopol_zeroshot_filtering.md  022_rethink_future_timeline_prompt.md  023_throughput_logging.md  024_zero_shot_gpu_saturation.md  025_composite_event_group_filtering.md  026_semantic_deduplication.md  027_lazy_retriever.md  028_ui_show_timeline_implication.md  029_openforecaster.md  030_ui_event_group.md  031_dense_retrieval.md  034_reranker_news_relevance.md  035_mlflow_tracing.md  (+6 more)
src/: mcp_server.py  mlflow_tracing.py  news_data.py  news_enrichment.py  polymarket_trading.py  portfolio_optimization.py  portfolio_optimize.py  prediction_markets.py
src/api/: api.py
(+20 files in other folders)
